--- a/java/parent/pom.xml
+++ b/java/parent/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>data-structure</module>
         <module>algorithm</module>
+        <module>design-pattern</module>
     </modules>
 
     <properties>
