--- a/java/parent/pom.xml
+++ b/java/parent/pom.xml
@@ -12,6 +12,7 @@
         <module>data-structure</module>
         <module>algorithm</module>
         <module>design-pattern</module>
+        <module>x</module>
     </modules>
 
     <properties>
