--- a/config/%USERNAME%/pip/pip.ini
+++ b/config/%USERNAME%/pip/pip.ini
@@ -1,5 +1,5 @@
 [global]
-index-url=https://mirrors.aliyun.com/pypi/simple/
+index-url = http://mirrors.aliyun.com/pypi/simple/
 
 [install]
 trusted-host=mirrors.aliyun.com
